[gd_scene load_steps=4 format=2]

[ext_resource path="res://music_player.gd" type="Script" id=1]
[ext_resource path="res://music/menu_music.ogg" type="AudioStream" id=2]
[ext_resource path="res://music/gameplay_music.ogg" type="AudioStream" id=3]

[node name="music_player" type="Node2D"]
script = ExtResource( 1 )

[node name="menu_theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -30.0

[node name="level_theme_1" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
volume_db = -30.0
[connection signal="finished" from="level_theme_1" to="." method="_on_level_theme_1_finished"]
